[gd_scene load_steps=8 format=3 uid="uid://bri3f1gojmgwv"]

[ext_resource type="Texture2D" uid="uid://cg34swtj0kvcp" path="res://Resources/Img/Maps/Maps.png" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Player.tscn" id="2"]
[ext_resource type="Script" path="res://Scripts/World.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://bnrd8aur7xjd7" path="res://Resources/Img/Maps/Floor.png" id="10"]
[ext_resource type="PackedScene" path="res://Scenes/Enemy.tscn" id="11"]

[sub_resource type="Sky" id="2"]

[sub_resource type="Environment" id="3"]
background_mode = 2
sky = SubResource("2")

[node name="World" type="Node3D"]
script = ExtResource("9")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("3")

[node name="Wall" type="Sprite3D" parent="WorldEnvironment"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 19)
texture = ExtResource("1")
hframes = 7

[node name="Wall2" type="Sprite3D" parent="WorldEnvironment"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, -19)
texture = ExtResource("1")
hframes = 7

[node name="Wall3" type="Sprite3D" parent="WorldEnvironment"]
transform = Transform3D(-8.74228e-08, 0, 1, 0, 2, 0, -2, 0, -4.37114e-08, -19, 0, 0)
texture = ExtResource("1")
hframes = 7

[node name="Wall4" type="Sprite3D" parent="WorldEnvironment"]
transform = Transform3D(-8.74228e-08, 0, 1, 0, 2, 0, -2, 0, -4.37114e-08, 19, 0, 0)
texture = ExtResource("1")
hframes = 7

[node name="Floor" type="Sprite3D" parent="WorldEnvironment"]
transform = Transform3D(3, 0, 0, 0, -1.31134e-07, -1, 0, 3, -4.37114e-08, 0, -12.4523, 0)
texture = ExtResource("10")

[node name="Player" parent="." instance=ExtResource("2")]

[node name="Enemy" parent="." instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.33597, -0.758789, -3.25461)

[node name="Enemy2" parent="." instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.34794, -0.758789, -3.25461)

[node name="Enemy3" parent="." instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82013, -0.758789, -0.636635)

[node name="Enemy4" parent="." instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.358587, -0.758789, 2.93657)

[node name="Enemy5" parent="." instance=ExtResource("11")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.60886, -0.758789, -0.0478747)
